kustomize/core/traefik/config/routes/traefik_dashboard.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`traefik.honker.dev`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
          strategy: RoundRobin
          weight: 10
          port: 80
      middlewares:
        - name: rate-limit
          namespace: traefik
        - name: https-redirectscheme
          namespace: traefik
        - name: default-headers
          namespace: traefik
        - name: compress
          namespace: traefik
  tls:
    secretName: honker-dev-tls
